# xfce4-mediaremote-plugin

./: AUTHORS  README.md  configure.ac
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  mediaremote-dialogs.c  mediaremote-dialogs.h  mediaremote.c  mediaremote.h
po/: LINGUAS  POTFILES.in
